# Terminality

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md  Terminality.sln  build_log.txt  diff.txt
Terminality/: CMakeLists.txt  Terminality.vcxproj  Terminality.vcxproj.filters  make_stub.py
Terminality.TespApp/: CMakeLists.txt  (+3 more)
Terminality/include/terminality/: DispatchTimer.ixx  EventSignal.ixx  FocusManager.ixx  HostApplication.ixx  Navigator.ixx  RenderBuffer.ixx  RenderContext.ixx  RenderStream.ixx  Terminality.hpp  Terminality.ixx
Terminality/include/terminality/Collections/: ObservableCollection.ixx  Queries.ixx
Terminality/include/terminality/Controls/: Border.hpp  Border.ixx  Button.ixx  Canvas.hpp  CheckBox.ixx  ContextMenu.ixx  Expander.hpp  Grid.ixx  Heap.hpp  ItemsControl.hpp  ItemsControl.ixx  Label.ixx  MenuBar.hpp  MessageBox.ixx  OpenFileDialog.ixx  ProgressBar.ixx  ScrollViewer.hpp  Slider.hpp  Spinner.hpp  Spinner.ixx  StackPanel.ixx  TextBox.ixx  TreeView.hpp
Terminality/include/terminality/Controls/Interactable/: Button.hpp  Button.ixx  CheckBox.hpp  CheckBox.ixx  Menu.hpp  MenuBar.hpp  TextBox.hpp  TextBox.ixx
Terminality/include/terminality/Controls/Layout/: Expander.hpp  Grid.hpp  Grid.ixx  ItemsControl.hpp  ItemsControl.ixx  ScrollViewer.hpp  ScrollViewer.ixx  StackPanel.hpp  StackPanel.ixx  TabControl.hpp  TabControl.ixx
Terminality/include/terminality/Controls/Visual/: Border.hpp  Border.ixx  DataGrid.hpp  Label.hpp  Label.ixx  ProgressBar.hpp  ProgressBar.ixx  Spinner.hpp  Spinner.ixx
Terminality/include/terminality/Core/: Color.hpp  Color.ixx  Focus.hpp  Focus.ixx  Geometry.hpp  Geometry.ixx  InputEvent.hpp  InputEvent.ixx  Layout.hpp  Layout.ixx  TextHelper.hpp  TextHelper.ixx
Terminality/include/terminality/Dialogs/: ContextMenu.hpp  ContextMenu.ixx  MessageBox.hpp  MessageBox.ixx  OpenFileDialog.hpp  OpenFileDialog.ixx
Terminality/include/terminality/Engine/: DispatchTimer.hpp  DispatchTimer.ixx  FocusManager.hpp  FocusManager.ixx  Navigator.hpp  Navigator.ixx  PlatformSpecific.hpp  RenderBuffer.hpp  RenderBuffer.ixx  RenderContext.hpp  RenderContext.ixx  RenderStream.hpp  RenderStream.ixx
Terminality/include/terminality/Framework/: ControlBase.hpp  ControlBase.ixx  Event.hpp  Event.ixx  HostApplication.hpp  HostApplication.ixx  Property.hpp  Property.ixx  VisualTree.hpp  VisualTree.ixx  VisualTreeNode.hpp  VisualTreeNode.ixx
Terminality/include/terminality/Framework/Collections/: ObservableCollection.hpp  ObservableCollection.ixx  Queries.hpp  Queries.ixx
Terminality/include/terminality/Layout/: ControlBase.ixx  DependencyObject.ixx  PropertyDescriptor.ixx  TextHelper.ixx  UIElement.ixx  VisualTree.ixx  VisualTreeNode.ixx
Terminality/include/terminality/Models/: Focus.ixx  Geometry.ixx  InputEvent.ixx  Layout.ixx
Terminality/src/: EventSignal.cpp  FocusManager.cpp  HostApplication.cpp  Navigator.cpp  RenderBuffer.cpp  RenderContext.cpp  RenderStream.cpp
Terminality/src/Controls/: Border.cpp  Button.cpp  Canvas.cpp  CheckBox.cpp  ContextMenu.cpp  DataGrid.cpp  Expander.cpp  Grid.cpp  Heap.cpp  Label.cpp  MenuBar.cpp  MessageBox.cpp  OpenFileDialog.cpp  ProgressBar.cpp  ScrollViewer.cpp  Slider.cpp  Spinner.cpp  StackPanel.cpp  TabControl.cpp  TextBox.cpp  TreeView.cpp
Terminality/src/Controls/Interactable/: Button.cpp  CheckBox.cpp  Menu.cpp  MenuBar.cpp  Slider.cpp  TextBox.cpp
Terminality/src/Controls/Layout/: Expander.cpp  Grid.cpp  Heap.cpp  ScrollViewer.cpp  StackPanel.cpp  TabControl.cpp  TreeView.cpp
Terminality/src/Controls/Visual/: Border.cpp  Canvas.cpp  DataGrid.cpp  Label.cpp  ProgressBar.cpp  Spinner.cpp
Terminality/src/Core/: Geometry.cpp  TextHelper.cpp
Terminality/src/Dialogs/: ContextMenu.cpp  MessageBox.cpp  OpenFileDialog.cpp
Terminality/src/Engine/: DispatchTimer.cpp  FocusManager.cpp  Navigator.cpp  RenderBuffer.cpp  RenderContext.cpp  RenderStream.cpp
Terminality/src/Framework/: ControlBase.cpp  HostApplication.cpp  VisualTree.cpp  VisualTreeNode.cpp
Terminality/src/Framework/PlatformSpecific/: HostApplication.Linux.cpp  HostApplication.Windows.cpp  Windows.cpp
Terminality/src/Layout/: ControlBase.cpp  DependencyObject.cpp  TextHelper.cpp  UIElement.cpp  VisualTree.cpp  VisualTreeNode.cpp
Terminality/src/Models/: Geometry.cpp
Terminality/src/PlatformSpecific/: HostApplication.Linux.cpp  HostApplication.Windows.cpp  HostBackend.Windows.cpp
(+2 files in other folders)
